PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2017 PHP 7.0.18

- DOM:
  . Fixed bug #74004 (LIBXML_NOWARNING flag ingnored on loadHTML*).
    (somedaysummer)

- OpenSSL:
  . Fixed bug #74159 (Writing a large buffer to a non-blocking encrypted stream
    fails with "bad write retry"). (trowski)

16 Mar 2017 PHP 7.0.17

- Core:
  . Fixed bug #73989 (PHP 7.1 Segfaults within Symfony test suite).
    (Dmitry, Laruence)
  . Fixed bug #74084 (Out of bound read - zend_mm_alloc_small). (Laruence)
  . Fixed bug #73807 (Performance problem with processing large post request).
    (Nikita)
  . Fixed bug #73998 (array_key_exists fails on arrays created by
    get_object_vars). (mhagstrand)
  . Fixed bug #73954 (NAN check fails on Alpine Linux with musl). (Andrea)
  . Fixed bug #74039 (is_infinite(-INF) returns false). (Christian Schmidt)
  . Fixed bug #73677 (Generating phar.phar core dump with gcc ASAN enabled
    build). (ondrej)

- Apache:
  . Fixed bug #61471 (Incomplete POST does not timeout but is passed to PHP).
    (Zheng Shao)

- Date:
  . Fixed bug #72719 (Relative datetime format ignores weekday on sundays
    only). (Derick)
  . Fixed bug #73294 (DateTime wrong when date string is negative). (Derick)
  . Fixed bug #73489 (wrong timestamp when call setTimeZone multi times with
    UTC offset). (xiami, Derick)
  . Fixed bug #73858 (first/last day of' flag is not being reset). (Derick)
  . Fixed bug #73942 ($date->modify('Friday this week') doesn't return a Friday
    if $date is a Sunday). (Derick)
  . Fixed bug #74057 (wrong day when using "this week" in strtotime). (Derick)

- FPM:
  . Fixed bug #69860 (php-fpm process accounting is broken with keepalive).
    (Denis Yeldandi)

- Hash:
  . Fixed bug #73127 (gost-crypto hash incorrect if input data contains long
    0xFF sequence). (Grundik)

- GD: